Appbar Update Start 1.0.

--- a/features/tvShow/src/main/res/values/strings.xml
+++ b/features/tvShow/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home_Page" translatable="false">Movie Details</string>
+    <string name="tvshows" translatable="false">TvShows</string>
 </resources>
