--- a/features/tvShow/src/main/res/values-hi/strings.xml
+++ b/features/tvShow/src/main/res/values-hi/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home_Page">मूवी विवरण</string>
+    <string name="description">Description</string>
 </resources>
