Total merge done 2.0.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="logout_confirmation">Logout Confirmation</string>
     <string name="logout_confirmation_message">Are you sure you want to Logout?</string>
     <string name="utils">Utils</string>
+    <string name="home_screen">Home Screen</string>
 </resources>
