--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -8,4 +8,5 @@
     <string name="logout_confirmation">लॉगआउट पुष्टि</string>
     <string name="logout_confirmation_message">क्या आप लॉग आउट करना चाहते हैं?</string>
     <string name="utils">Utils</string>
+    <string name="home_screen">Home Screen</string>
 </resources>
