--- a/features/tvShow/src/main/res/values-hi/strings.xml
+++ b/features/tvShow/src/main/res/values-hi/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="home_Page">मूवी विवरण</string>
     <string name="description">Description</string>
+    <string name="tv_show_feed">Tv Show Feed</string>
+    <string name="profile">Profile</string>
 </resources>
