--- a/features/tvShow/src/main/res/values/strings.xml
+++ b/features/tvShow/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="home_Page" translatable="false">Movie Details</string>
     <string name="tvshows" translatable="false">TvShows</string>
     <string name="description">Description</string>
+    <string name="tv_show_feed">Tv Show Feed</string>
+    <string name="profile">Profile</string>
 </resources>
