--- a/components/src/main/res/values/strings.xml
+++ b/components/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
+    <string name="hide_password">Hide Password</string>
+    <string name="show_password">Show Password</string>
+    <string name="or">or</string>
 </resources>
