Sign up 1.0 complete

--- a/features/auth/src/main/res/values-hi/strings.xml
+++ b/features/auth/src/main/res/values-hi/strings.xml
@@ -3,4 +3,6 @@
     <string name="signIn">SignIn</string>
     <string name="welcome_back">Welcome Back</string>
     <string name="invalid_password">Invalid Password</string>
+    <string name="invalid_first_name">Invalid First Name</string>
+    <string name="invalid_last_name">Invalid Last Name</string>
 </resources>
