--- a/components/src/main/res/values-hi/strings.xml
+++ b/components/src/main/res/values-hi/strings.xml
@@ -15,7 +15,17 @@
     <string name="createAccountError">Could not create an account</string>
     <string name="offlineError">You seem to be offline</string>
     <string name="signIn">SignIn</string>
-    <string name="welcome_back">Welcome Back</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="invalid_email_format">Invalid Email Format</string>
+    <string name="hello">Hey there,</string>
+    <string name="welcome_back">Welcome back</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="invalid_password">Invalid Password</string>
+    <string name="invalid_first_name">Invalid First Name</string>
+    <string name="invalid_last_name">Invalid Last Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="by_continuing_you">By continuing you accept our policies and terms</string>
+    <string name="register">Register</string>
+
 </resources>
