--- a/components/src/main/res/values/strings.xml
+++ b/components/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="by_continuing_you">By continuing you accept our policies and terms</string>
     <string name="register">Register</string>
+    <string name="home_title">Home</string>
+    <string name="celluloid">Celluloid</string>
 
 </resources>
